--- a/templates/school/index.html
+++ b/templates/school/index.html
@@ -33,8 +33,8 @@ body {
 
 /* Floating Div */
 .floating-div {
-  position: fixed;
-  top: 50%;
+  position: absolute;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(8, 8, 8, 0.7);
@@ -53,7 +53,7 @@ body {
     transform: translate(-50%, -50%);
   }
   50% {
-    transform: translate(-50%, -60%);
+    transform: translate(-50%, -50%);
   }
 }
 
@@ -125,6 +125,8 @@ li{
 /* Red Text */
 h3 {
   color: rgb(248, 242, 242);
+  /* text-decoration: underline;
+  text-decoration-color: #676a74; */
 }
 
 /* Text Glow Animation */
@@ -203,8 +205,8 @@ h3 {
 
   <div class="background"></div>
   <div class="floating-div">
-    <h1 style="color: #e8300c;">Welcome</h1>
-    <p style="color: rgb(36, 232, 22);" class="quote glow">Knowledge is key to success.</p>
+    <h1 style="color: #f6f1f0;">Welcome</h1>
+    <p style="color: rgb(248, 252, 248);" class="quote glow">Knowledge is key to success.</p>
     <a class="btn-admission" href="/studentsignup" role="button">Take Admission</a>
   </div>
 
