--- a/templates/school/admin_student.html
+++ b/templates/school/admin_student.html
@@ -12,8 +12,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <link href="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
-
+ <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
   <style type="text/css">
     a:link {
       text-decoration: none;
@@ -68,6 +67,11 @@
 
     .f-right {
       float: right;
+    }
+     .row{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 10px;
     }
   </style>
 </head>
